@@ -40,20 +40,46 @@ function nggallery_sortorder($galleryID = 0){
 	$act_gallery_url 	= get_option ('siteurl')."/".$act_gallery->path."/";
 	$act_thumbnail_url 	= get_option ('siteurl')."/".$act_gallery->path.nggGalleryPlugin::get_thumbnail_folder($act_gallery->path, FALSE);
 
-	$picturelist = $wpdb->get_results("SELECT * FROM $wpdb->nggpictures WHERE galleryid = '$galleryID' ORDER BY sortorder ASC");
+	// look for presort args	
+	$presort = $_GET['presort'];
+	$dir = ( $_GET['dir'] == 'DESC' ) ? 'DESC' : 'ASC';
+	$sortitems = array('pid', 'filename', 'alttext', 'imagedate');
+	// ensure that nobody added some evil sorting :-)
+	if (in_array( $presort, $sortitems) )
+		$picturelist = $wpdb->get_results("SELECT * FROM $wpdb->nggpictures WHERE galleryid = '$galleryID' ORDER BY {$presort} {$dir}");
+	else	
+		$picturelist = $wpdb->get_results("SELECT * FROM $wpdb->nggpictures WHERE galleryid = '$galleryID' ORDER BY sortorder {$dir}");
 
+	//this is the url without any presort variable
+	$clean_url = 'admin.php?page=nggallery-manage-gallery&amp;mode=sort&amp;gid=' . $galleryID;
+	// In the case somebody presort, then we take this url
+	if ( isset($_GET['dir']) || isset($_GET['presort']) )
+		$base_url = $_SERVER['REQUEST_URI'];
+	else		
+		$base_url = $clean_url;
+	
 ?>
 	<script type='text/javascript' src='<?php echo NGGALLERY_URLPATH ?>admin/js/sorter.js'></script>
 	<div class="wrap">
-		<div class="bordertitle">
-			<h2 style="border: medium none ; padding-bottom: 0px;"><?php _e('Sort Gallery', 'nggallery') ?></h2>
-			<form id="sortGallery" method="POST" action="<?php echo 'admin.php?page=nggallery-manage-gallery&amp;mode=sort&amp;gid='.$galleryID ?>" onsubmit="saveImageOrder()" accept-charset="utf-8">
-				<?php wp_nonce_field('ngg_updatesortorder') ?>
-				<input name="sortorder" type="hidden" />
+		<form id="sortGallery" method="POST" action="<?php echo $clean_url ?>" onsubmit="saveImageOrder()" accept-charset="utf-8">
+			<h2><?php _e('Sort Gallery', 'nggallery') ?></h2>
+			<?php wp_nonce_field('ngg_updatesortorder') ?>
+			<input name="sortorder" type="hidden" />
+			<ul class="subsubsub">
+				<li><?php _e('Presort', 'nggallery') ?> :</li>
+				<li><a href="<?php echo attribute_escape(remove_query_arg('presort', $base_url)); ?>" <?php if ($presort == '') echo 'class="current"'; ?>><?php _e('Unsorted', 'nggallery') ?></a> |</li>
+				<li><a href="<?php echo attribute_escape(add_query_arg('presort', 'pid', $base_url)); ?>" <?php if ($presort == 'pid') echo 'class="current"'; ?>><?php _e('Image ID', 'nggallery') ?></a> |</li>
+				<li><a href="<?php echo attribute_escape(add_query_arg('presort', 'filename', $base_url)); ?>" <?php if ($presort == 'filename') echo 'class="current"'; ?>><?php _e('Filename', 'nggallery') ?></a> |</li>
+				<li><a href="<?php echo attribute_escape(add_query_arg('presort', 'alttext', $base_url)); ?>" <?php if ($presort == 'alttext') echo 'class="current"'; ?>><?php _e('Alt/Title text', 'nggallery') ?></a> |</li>
+				<li><a href="<?php echo attribute_escape(add_query_arg('presort', 'imagedate', $base_url)); ?>" <?php if ($presort == 'imagedate') echo 'class="current"'; ?>><?php _e('Date/Time', 'nggallery') ?></a> |</li>
+				<li><a href="<?php echo attribute_escape(add_query_arg('dir', 'ASC', $base_url)); ?>" <?php if ($dir == 'ASC') echo 'class="current"'; ?>><?php _e('Ascending', 'nggallery') ?></a> |</li>
+				<li><a href="<?php echo attribute_escape(add_query_arg('dir', 'DESC', $base_url)); ?>" <?php if ($dir == 'DESC') echo 'class="current"'; ?>><?php _e('Descending', 'nggallery') ?></a></li>
+			</ul>
+			<p id="sortButton">
 				<input class="button" type="submit" name="backToGallery" value="<?php _e('Back to gallery', 'nggallery') ?>" />
 				<input class="button" type="submit" name="updateSortorder" onclick="saveImageOrder()" value="<?php _e('Update Sort Order', 'nggallery') ?> &raquo;" />
-			</form>
-		</div>
+			</p>
+		</form>
 		<div id="debug" style="clear:both"></div>
 		<?php 
 		if($picturelist) {
